[gd_scene load_steps=9 format=3 uid="uid://wcrgp6fa7k4p"]

[ext_resource type="Script" uid="uid://dotnytqbq0mk1" path="res://src/menu/menu.gd" id="1_klgdb"]
[ext_resource type="PackedScene" uid="uid://cep8prwtmd5yt" path="res://assets/menu/stats_container.tscn" id="2_mcvr8"]
[ext_resource type="PackedScene" uid="uid://certcj8gg5mep" path="res://assets/menu/item_stat_container.tscn" id="3_e0arn"]
[ext_resource type="Script" uid="uid://huutobnx3oj4" path="res://src/menu/equipment_container.gd" id="4_037ec"]
[ext_resource type="Script" uid="uid://c8wnbkf5etxgx" path="res://src/menu/equip_stats_container.gd" id="5_y1o0p"]
[ext_resource type="Script" uid="uid://dqjgd16k24mv7" path="res://src/menu/equips_container.gd" id="6_r8yej"]
[ext_resource type="Script" uid="uid://du1gn5d3vk8qk" path="res://src/menu/magic_equipped_container.gd" id="7_t0a87"]
[ext_resource type="Script" uid="uid://dgw4gjk4c16dx" path="res://src/menu/attack_stat_container.gd" id="8_t0a87"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_klgdb")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="StatsContainer" parent="PanelContainer/HBoxContainer" instance=ExtResource("2_mcvr8")]
layout_mode = 2

[node name="TestContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
visible = false
layout_mode = 2

[node name="AddHP" type="Button" parent="PanelContainer/HBoxContainer/TestContainer"]
layout_mode = 2
text = "Add HP"

[node name="MinusHP" type="Button" parent="PanelContainer/HBoxContainer/TestContainer"]
layout_mode = 2
text = "Minus HP"

[node name="ItemsContainer" type="ItemList" parent="PanelContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
auto_width = true

[node name="ItemStatContainer" parent="PanelContainer/HBoxContainer" instance=ExtResource("3_e0arn")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="EquipmentContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
script = ExtResource("4_037ec")

[node name="WeaponLabel" type="Label" parent="PanelContainer/HBoxContainer/EquipmentContainer"]
layout_mode = 2
text = "Weapon:"

[node name="WeaponButton" type="Button" parent="PanelContainer/HBoxContainer/EquipmentContainer"]
layout_mode = 2
text = "wepon"

[node name="ArmorLabel" type="Label" parent="PanelContainer/HBoxContainer/EquipmentContainer"]
layout_mode = 2
text = "Armor:"

[node name="ArmorButton" type="Button" parent="PanelContainer/HBoxContainer/EquipmentContainer"]
layout_mode = 2
text = "armor"

[node name="AccessoryLabel" type="Label" parent="PanelContainer/HBoxContainer/EquipmentContainer"]
layout_mode = 2
text = "Accessory:"

[node name="AccessoryButton" type="Button" parent="PanelContainer/HBoxContainer/EquipmentContainer"]
layout_mode = 2
text = "acc"

[node name="EquipStatsContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
script = ExtResource("5_y1o0p")

[node name="NameLabel" type="Label" parent="PanelContainer/HBoxContainer/EquipStatsContainer"]
layout_mode = 2
text = "NAME"

[node name="HpLabel" type="Label" parent="PanelContainer/HBoxContainer/EquipStatsContainer"]
layout_mode = 2
text = "HP: 999"

[node name="MpLabel" type="Label" parent="PanelContainer/HBoxContainer/EquipStatsContainer"]
layout_mode = 2
text = "MP: 999"

[node name="StrengthLabel" type="Label" parent="PanelContainer/HBoxContainer/EquipStatsContainer"]
layout_mode = 2
text = "Str: 999"

[node name="WisdomLabel" type="Label" parent="PanelContainer/HBoxContainer/EquipStatsContainer"]
layout_mode = 2
text = "Wis: 999"

[node name="DefenseLabel" type="Label" parent="PanelContainer/HBoxContainer/EquipStatsContainer"]
layout_mode = 2
text = "Def: 999"

[node name="UnequipButton" type="Button" parent="PanelContainer/HBoxContainer/EquipStatsContainer"]
layout_mode = 2
text = "Unequip"

[node name="ChangeButton" type="Button" parent="PanelContainer/HBoxContainer/EquipStatsContainer"]
layout_mode = 2
text = "Change"

[node name="EquipsContainer" type="ItemList" parent="PanelContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
auto_width = true
script = ExtResource("6_r8yej")

[node name="MagicEquippedContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
script = ExtResource("7_t0a87")

[node name="AttackStatContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
script = ExtResource("8_t0a87")

[node name="NameLabel" type="Label" parent="PanelContainer/HBoxContainer/AttackStatContainer"]
layout_mode = 2
text = "NAME"

[node name="ElementLabel" type="Label" parent="PanelContainer/HBoxContainer/AttackStatContainer"]
layout_mode = 2
text = "ELEMENT"

[node name="MpLabel" type="Label" parent="PanelContainer/HBoxContainer/AttackStatContainer"]
layout_mode = 2
text = "MP"

[node name="TierLabel" type="Label" parent="PanelContainer/HBoxContainer/AttackStatContainer"]
layout_mode = 2
text = "TIER"

[node name="UnequipButton" type="Button" parent="PanelContainer/HBoxContainer/AttackStatContainer"]
layout_mode = 2
text = "Unequip"

[node name="ChangeButton" type="Button" parent="PanelContainer/HBoxContainer/AttackStatContainer"]
layout_mode = 2
text = "Change"

[node name="AttacksContainer" type="ItemList" parent="PanelContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
auto_width = true

[node name="Spacer" type="PanelContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ActionsContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2

[node name="ItemsButton" type="Button" parent="PanelContainer/HBoxContainer/ActionsContainer"]
layout_mode = 2
text = "Items"

[node name="EquipmentButton" type="Button" parent="PanelContainer/HBoxContainer/ActionsContainer"]
layout_mode = 2
text = "Equips"

[node name="MagicButton" type="Button" parent="PanelContainer/HBoxContainer/ActionsContainer"]
layout_mode = 2
text = "Magic"

[node name="LimitButton" type="Button" parent="PanelContainer/HBoxContainer/ActionsContainer"]
layout_mode = 2
text = "Limit"

[node name="SettingsButton" type="Button" parent="PanelContainer/HBoxContainer/ActionsContainer"]
layout_mode = 2
text = "Settings"

[node name="SaveButton" type="Button" parent="PanelContainer/HBoxContainer/ActionsContainer"]
layout_mode = 2
text = "Save"

[node name="ExitButton" type="Button" parent="PanelContainer/HBoxContainer/ActionsContainer"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="PanelContainer/HBoxContainer/TestContainer/AddHP" to="." method="_on_add_hp_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/TestContainer/MinusHP" to="." method="_on_minus_hp_pressed"]
[connection signal="item_selected" from="PanelContainer/HBoxContainer/ItemsContainer" to="." method="_on_items_container_item_selected"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/EquipmentContainer/WeaponButton" to="." method="_on_weapon_button_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/EquipmentContainer/ArmorButton" to="." method="_on_armor_button_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/EquipmentContainer/AccessoryButton" to="." method="_on_accessory_button_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/EquipStatsContainer/UnequipButton" to="." method="_on_unequip_button_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/EquipStatsContainer/UnequipButton" to="PanelContainer/HBoxContainer/EquipStatsContainer" method="_on_unequip_button_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/EquipStatsContainer/ChangeButton" to="." method="_on_change_button_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/EquipStatsContainer/ChangeButton" to="PanelContainer/HBoxContainer/EquipStatsContainer" method="_on_change_button_pressed"]
[connection signal="item_selected" from="PanelContainer/HBoxContainer/EquipsContainer" to="." method="_on_equips_container_item_selected"]
[connection signal="item_selected" from="PanelContainer/HBoxContainer/EquipsContainer" to="PanelContainer/HBoxContainer/EquipsContainer" method="_on_item_selected"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/AttackStatContainer/UnequipButton" to="PanelContainer/HBoxContainer/AttackStatContainer" method="_on_unequip_button_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/AttackStatContainer/ChangeButton" to="PanelContainer/HBoxContainer/AttackStatContainer" method="_on_change_button_pressed"]
[connection signal="item_selected" from="PanelContainer/HBoxContainer/AttacksContainer" to="." method="_on_attacks_container_item_selected"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/ActionsContainer/ItemsButton" to="." method="_on_items_button_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/ActionsContainer/EquipmentButton" to="." method="_on_equipment_button_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/ActionsContainer/MagicButton" to="." method="_on_magic_button_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/ActionsContainer/LimitButton" to="." method="_on_limit_button_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/ActionsContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/ActionsContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/ActionsContainer/ExitButton" to="." method="_on_exit_button_pressed"]
